watchlist cards - fixed data not populating correctly on saved tenders - formatted tender cards better - further dark mode refinements - adjusted profile page

--- a/Tender-UserInterface/Tender-User-Interface-React/src/Components/LoadingSpinner/LoadingSpinner.css
+++ b/Tender-UserInterface/Tender-User-Interface-React/src/Components/LoadingSpinner/LoadingSpinner.css
@@ -30,10 +30,9 @@
 
 .loading-text {
     font-size: 1rem;
-    color: #33497D;
+    color: var(--heading-text);
 }
 
-/* Smooth rotation with subtle opacity changes */
 @keyframes rotateFade {
     0% {
         transform: rotate(0deg);
